docs: swagger authの追加
