# src/controller/menu_controller.go
@@ -13,7 +13,7 @@ type MenuController struct{}
 // @Produce json
 // @accept application/x-json-stream
 // @Success 200
-// @Security BasicAuth
+// @Security ApiKeyAuth
 // @Router /menu/top [get]
 func (pc MenuController) Top(c *gin.Context) {
     c.JSON(http.StatusOK, gin.H{
